--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
-<html>
-<body>  
-  
-<img src="s.png.png" alt="Superman" style="width:200px;height:200px;" align="right">
+<div class="jumbotron text-center">
+  <h1>My First Bootstrap Page</h1>
+  <p>Resize this responsive page to see the effect!</p> 
+</div>
 
-
-
-
-
-
-
-
-
-  <p1>Work in Progress...</p1>
-  <p2>Work in Progress...</p2>
-
-
-
-
-
-
-
-
-
-</body>
-</html>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+      <h3>Column 1</h3>
+      <p>Lorem ipsum dolor..</p>
+      <p>Ut enim ad..</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>Column 2</h3>
+      <p>Lorem ipsum dolor..</p>
+      <p>Ut enim ad..</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>Column 3</h3> 
+      <p>Lorem ipsum dolor..</p>
+      <p>Ut enim ad..</p>
+    </div>
+  </div>
+</div>
